test/asm/string-concat.err
error: string-concat.asm(25):
    syntax error, unexpected ++
error: string-concat.asm(26):
    syntax error, unexpected ++, expecting ] or + or -
error: Assembly aborted (2 errors)!
